--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar a sua conta e fazer as configurações do seu ambiente.</p>
-                <form action="login.php" method="post" autocomplete="on"></form>
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo"></div>
+                </form>
             </div>
 
         </section>
