--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <main>
@@ -18,9 +19,18 @@
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar a sua conta e fazer as configurações do seu ambiente.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <label for="ilogin">Login</label>
+                        <span class="material-icons">mail_lock</span>
+                        <input type="email" name="login" id="ilogin" placeholder="Digite o seu e-mail" autocomplete="email" required maxlength="30">                        
+                        <label for="ilogin"></label>
+
                     </div>
-                    <div class="campo"></div>
+                    <div class="campo">
+                        <span class="material-icons">password</span>
+                        <input type="password" name="senha" id="isenha" placeholder="Digite a sua senha" autocomplete="current-password" required minlength="5" maxlength="12">
+                        <label for="isenha"></label>
+                </div>
+                <input type="submit" value="Entrar">
+                <a href="esqueci.html">Esqueci a senha <span class="material-icons">psychology_alt</span></a>
                 </form>
             </div>
 
