Mais configurações em CSS do FORM
Capítulo 26 Aula 05 – Aplicando estilo ao formulário de login - Curso de HTML5 e CSS3 do Curso em Vídeo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <label for="isenha"></label>
                 </div>
                 <input type="submit" value="Entrar">
-                <a href="esqueci.html">Esqueci a senha <span class="material-icons">psychology_alt</span></a>
+                <a href="esqueci.html" class="botao">Esqueci a senha <span class="material-icons">psychology_alt</span></a>
                 </form>
             </div>
 
